--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                     <textarea name="msg" class="form-control">Ecrivez votre texte ici</textarea>
                                 </div>
                                 <div class="col-xs-12">
-                                    <button type="submit" class="btn btn-primary">Envoyer un sms</button>
+                                    <button type="submit" class="btn btn-primary">Envoyer sms</button>
                                 </div>
                             </fieldset>
                        </form>
