--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                        <form id="sms-form" class="form-horizontal">
                            <fieldset>
                                 <div class="col-xs-12">
-                                    <label class="control-label">Numéro de téléphone</label>
+                                    <label class="control-label">Telephon number</label>
                                     <input type="tel" name="phone" value="555-555-1234" class="form-control"/>
                                 </div>
                                 <div class="col-xs-12">
                                     <label class="control-label">Message</label>
-                                    <textarea name="msg" class="form-control">Ecrivez votre texte ici</textarea>
+                                    <textarea name="msg" class="form-control">Write your message here</textarea>
                                 </div>
                                 <div class="col-xs-12">
-                                    <button type="submit" class="btn btn-primary">Envoyer un sms</button>
+                                    <button type="submit" class="btn btn-primary">Send sms</button>
                                 </div>
                             </fieldset>
                        </form>
