--- a/silence/index.html
+++ b/silence/index.html
@@ -16,12 +16,12 @@
                        <form id="sms-form" class="form-horizontal">
                            <fieldset>
                                 <div class="col-xs-12">
-                                    <label class="control-label">Numero de telephone</label>
-                                    <input type="tel" name="phone" value="ex:0624354657" class="form-control"/>
+                                    <label class="control-label">Numéro de téléphone</label>
+                                    <input type="tel" name="phone" value="555-555-1234" class="form-control"/>
                                 </div>
                                 <div class="col-xs-12">
                                     <label class="control-label">Message</label>
-                                    <textarea name="msg" class="form-control">Ecrivez ici</textarea>
+                                    <textarea name="msg" class="form-control">Ecrivez votre texte ici</textarea>
                                 </div>
                                 <div class="col-xs-12">
                                     <button type="submit" class="btn btn-primary">Envoyer un sms</button>
@@ -32,14 +32,14 @@
             </div>
             <div class="row">
                <div class="col-xs-12">
-                    <h3>Notifications</h3>
+                    <h3>Alarms</h3>
                     <ul id="alarms"></ul>
                </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Reponse</h3>
-                    <div id="response">La reponse va apparaitre ici</div>
+                    <h3>Response</h3>
+                    <div id="response">response will go here</div>
                 </div>
             </div>
          </div>
