--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Reponse</h3>
-                    <div id="response">La reponse va apparaitre ici</div>
+                    <h3>Response</h3>
+                    <div id="response">Response will be displayed here</div>
                 </div>
             </div>
          </div>
