--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                            <fieldset>
                                 <div class="col-xs-12">
 
-                                    <label class="control-label">Telephon number</label>
-                                    <input type="tel" name="phone" value="555-555-1234" class="form-control"/>
+                                    <label class="control-label">Phone number</label>
+                                    <input type="tel" name="phone" value="Ex : 06-54-57-89-76" class="form-control"/>
                                 </div>
                                 <div class="col-xs-12">
                                     <label class="control-label">Message</label>
